[gd_scene load_steps=8 format=3 uid="uid://bxn3rrdekme4b"]

[ext_resource type="Theme" uid="uid://dyye235a7qia8" path="res://Theme/theme.tres" id="1_wvhkx"]
[ext_resource type="Texture2D" uid="uid://rfokq3kgb05p" path="res://Sprites/Portraits/proton_big.png" id="1_xt5hn"]
[ext_resource type="Script" path="res://Scripts/UnitPreview.gd" id="2_r6it6"]
[ext_resource type="Texture2D" uid="uid://wnxndhdjerh7" path="res://Sprites/UI/HealthBarBack.tres" id="4_fmu38"]
[ext_resource type="Texture2D" uid="uid://d2t50grm12hvp" path="res://Sprites/UI/HealthBarPlayer.tres" id="5_d3e85"]
[ext_resource type="Texture2D" uid="uid://da0sx8yo2kgbx" path="res://Sprites/UI/HealthBarBorder.png" id="5_fgyma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdxe5"]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="UnitPreview" type="PanelContainer"]
custom_minimum_size = Vector2(300, 600)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_vertical = 2
theme = ExtResource("1_wvhkx")
script = ExtResource("2_r6it6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DisplayNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Proton
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortraitPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jdxe5")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PortraitPanelContainer"]
layout_mode = 2
texture = ExtResource("1_xt5hn")
expand_mode = 1

[node name="PanelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HealthHeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "HP"

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "75/100"
horizontal_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8
value = 75.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("4_fmu38")
texture_over = ExtResource("5_fgyma")
texture_progress = ExtResource("5_d3e85")
